// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Dark is mode render correctly 1`] = `
<div
  className="MuiFormGroup-root css-dmmspl-MuiFormGroup-root"
>
  <label
    className="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementBottom css-77as7c-MuiFormControlLabel-root"
  >
    <span
      className="MuiSwitch-root MuiSwitch-sizeMedium css-lu9khh-MuiSwitch-root"
    >
      <span
        className="MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root Mui-checked css-5ryogn-MuiButtonBase-root-MuiSwitch-switchBase"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <input
          checked={true}
          className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
        />
      </span>
      <span
        className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
      />
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1j8847n-MuiTypography-root"
    >
      Dark mode  
    </span>
  </label>
</div>
`;

exports[`Switch Light is mode render correctly 1`] = `
<div
  className="MuiFormGroup-root css-dmmspl-MuiFormGroup-root"
>
  <label
    className="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementBottom css-77as7c-MuiFormControlLabel-root"
  >
    <span
      className="MuiSwitch-root MuiSwitch-sizeMedium css-lu9khh-MuiSwitch-root"
    >
      <span
        className="MuiSwitch-switchBase MuiSwitch-colorPrimary MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root css-5ryogn-MuiButtonBase-root-MuiSwitch-switchBase"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <input
          checked={false}
          className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
        />
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </span>
      <span
        className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
      />
    </span>
    <span
      className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1j8847n-MuiTypography-root"
    >
      Light mode  
    </span>
  </label>
</div>
`;
